[safetensors] Add read support for safetensors format
- Add read support for safetensors format
- Refactor existing GGUF format reader and models